--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="https://api.whatsapp.com/send?phone=+919447963311&text=" class="btn btn-lg btn-primary">Contact Me</a>
                 <ul class="social-links">
                   <li class="label">Or through</li>
-                  <li><a href="#"><img src="assets/behance.png"></a></li>
+                  <li><a href="https://wa.link/x5pmin"><img src="assets/behance.png"></a></li>
                   <li><a href="#"><img src="assets/dribbble.png"></a></li>
                   <li><a href="#"><img src="assets/twitter.png"></a></li>
                   <li><a href="#"><img src="assets/github.png"></a></li>
