--- a/index.html
+++ b/index.html
@@ -124,6 +124,82 @@
         </div>
       </section>
 
+
+
+      <section class="testimonial">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              
+              <h1 class="heading pink"><span class="purple">About </span><br>Me</h1>
+            </div>
+          </div>  
+        </div>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        .a-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 50px;
+            flex-wrap: wrap; /* Allow items to wrap to the next line on small screens */
+        }
+
+        .b-text {
+            flex: 1;
+            max-width: 600px;
+            text-align: justify;
+        }
+
+        .b-text h2 {
+            color: #333;
+        }
+
+        .b-text p {
+            color: #666;
+        }
+
+        .c-picture {
+            max-width: 100%;
+            border-radius: 8px;
+            margin-top: 20px; /* Add some space between text and image */
+        }
+    </style>
+    <title>About Me</title>
+</head>
+
+<body>
+
+    <div class="a-section">
+        <div class="b-text">
+            
+            <p>With over a decade of dedicated teaching experience, I am a charismatic and dependable educator committed to empowering students to achieve academic excellence. Specializing in IIT-JEE/NEET Physics, I employ innovative teaching methods, solving 50 questions daily to ensure comprehensive preparation. My expertise extends to IGCSE Math and Physics, along with Cambridge International AS and A Level Physics. I simplify complex concepts using online resources, teaching shortcuts and tricks to enhance problem-solving skills, fostering a results-oriented approach. Currently at Greenvalley International School, Trivandrum, I handle Cambridge International AS and A Level Physics and IGCSE Physics, showcasing my proficiency in delivering quality education.<br><br>
+
+In the past year, I've successfully conducted virtual classes for Lakes Grammar School in New South Wales, Australia, a student from the British International School, and two students from HLC International School in Chennai, covering IGCSE Physics (8th-12th grade) and Mathematics (8th-10th grade) using electronic slate through Skype and Zoom. Additionally, I bring three years of experience teaching NEET/JEE Physics, both mains and advance classes, at various schools and esteemed institutes. Notably, I have mentored two NEET 2019 rankers (Kerala state 63 & 234) and facilitated seven MBBS selections in NEET 2018, reflecting my commitment to student success.</p>
+        </div>
+        <div class="c-picture">
+            <img src="Pic.png" alt="Your Name">
+        </div>
+    </div>
+
+</body>
+
+</html>
+
+
       <section class="testimonial">
         <div class="container">
           <div class="row">
@@ -223,7 +299,7 @@
             </div>
             <div class="col-md-4 text-center stat-box">
               <h1 class="blue counter">7</h1>
-              <h3>Instiuties</h3>
+              <h3>Institutes</h3>
             </div>
             <div class="col-md-4 text-center stat-box">
               <h1 class="pink"><span class="counter">12000</span>+</h1>
