--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
               </nav>
               <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
               <div class="hero-text">
-                <h1><span>Hi, I am</span><br>Goutham S Kumar</h1>
+                <h1><span>Hi, I am</span><br>Goutham</h1>
                 <h3>The Right Teacher You Are Looking For</h3>
-                <a href="https://api.whatsapp.com/send?phone=+919447963311&text=" class="btn btn-lg btn-primary">Contact Me</a>
+                <a href="https://wa.link/x5pmin" class="btn btn-lg btn-primary">Contact Me</a>
                 <ul class="social-links">
                   <li class="label">Or through</li>
+                  <li><a href="https://www.linkedin.com/in/goutham-s-kumar-a106a2223/"><img src="assets/github.png"></a></li>
                   <li><a href="https://wa.link/x5pmin"><img src="assets/behance.png"></a></li>
-                  <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="#"><img src="assets/twitter.png"></a></li>
-                  <li><a href="#"><img src="assets/github.png"></a></li>
+                  <li><a href="https://www.facebook.com/goutham.skumar.18"><img src="assets/dribbble.png"></a></li>
+                  <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fgouthamsk222"><img src="assets/tests.png"></a></li>
+                  <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li>
                 </ul>
               </div>
             </div>
@@ -200,6 +201,39 @@ In the past year, I've successfully conducted virtual classes for Lakes Grammar 
 </html>
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Experience Certificate</title>
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            text-align: center;
+        }
+
+        .certificate-img {
+            max-width: 30%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>My Experience Certificates</h2>
+
+    <div>
+        <img class="certificate-img" src="assets/gv.jpg" alt="Experience Certificate">
+    </div>
+
+</body>
+</html>
+<br><br>
+
+
       <section class="testimonial">
         <div class="container">
           <div class="row">
@@ -326,7 +360,7 @@ In the past year, I've successfully conducted virtual classes for Lakes Grammar 
         <div class="container-fluid">
           <div class="row footer">
             <div class="col-md-12 text-center">
-              <h1>Goutham<br><span>S Kumar</span></h1>
+              <h1>Goutham S Kumar</h1>
               <ul class="social-links">
                 <li><a href="#"><img src="assets/behance.png"></a></li>
                 <li><a href="#"><img src="assets/dribbble.png"></a></li>
