--- a/index.html
+++ b/index.html
@@ -250,27 +250,34 @@ In the past year, I've successfully conducted virtual classes for Lakes Grammar 
               <div class="swiper-container testimonial-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide testimonial-box yellow">
-                    <h1>Pixel Perfect design</h1>
+                    <h1> </h1>
                     <p>Good at teaching the topic thoroughly from the get go</p>
                     <div class="text-right">
                       <p class="name">- SreeGovind </p>
-                      <p class="designation">Founder, Arrow</p>
+                      <p class="designation"> </p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box purple">
-                    <h1>Minimal and Clean</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>   </h1>
+                    <p>I am writing to express my wholehearted recommendation for Goutham Sir, who has been an exemplary educator at Greenvalley. As a student, I have had the privilege of witnessing his dedication, passion, and commitment to fostering a positive and enriching learning environment.<br>
+Goutham Sir has consistently demonstrated a profound understanding of his subject matter, effectively translating complex concepts into accessible and engaging lessons. He has the remarkable ability to capture the attention of students, instilling in them a genuine enthusiasm for learning. I have observed firsthand how Goutham Sir  employs a variety of teaching methods and resources to accommodate diverse learning styles, ensuring that each student can grasp and apply the material.</p>
                     <div class="text-right">
-                      <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
+                      <p class="name">- Vaishnav V</p>
+                      <p class="designation"> </p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box blue">
-                    <h1>Built with Bootstrap</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>   </h1>
+                    <p>I am delighted to recommend Mr. Goutham, our senior secondary school Math teacher, whom I've known for over three years.<br>
+
+Mr. Goutham is not just a teacher; he's a mentor who has a knack for making complex math concepts understandable and interesting. His dedication to our success is unmatched, and he willingly invests extra time to ensure we grasp every concept thoroughly.<br>
+
+What I appreciate most is his approachability. Mr. Goutham creates a comfortable space where students can freely ask questions, fostering a positive learning environment. His commitment to helping us succeed is truly inspiring, and it's clear he genuinely cares about each student passing with flying colors.<br>
+
+I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and his dedication to student success make him an exceptional educator who leaves a lasting impact. Any student would be fortunate to have him guide them through the world of mathematics.</p>
                     <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
+                      <p class="name">- Nithya AS</p>
+                      <p class="designation">  </p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box pink">
