--- a/index.html
+++ b/index.html
@@ -281,19 +281,20 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box pink">
-                    <h1>Responsive template</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>  </h1>
+                    <p>One of the best teacher ever!!!! I love the way he teaches. His teaching style is no less than professional colleage proffesors such as Walter Lewin. His classes are full of jokes and laughs mainly because of his fun aproach to teach hard and boring subjects such as physics and math. I just love his voice modulation, ensuring that i never zone out </p>
                     <div class="text-right">
-                      <p class="name">- Rocky Hych</p>
-                      <p class="designation">CTO, Upside Down</p>
+                      <p class="name">- Aditya Sundaresan </p>
+                      <p class="designation">  </p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box yellow">
-                    <h1>Pixel Perfect</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+                    <h1>  </h1>
+                    <p>From the moment he entered the class he would grab our attention. His voice broke through the atmosphere ensuring that everything was crystal clear whether it be basic addition or nuclear physics! Time flew by when he was teaching and hearty laughs often filled our classes. An incredibly friendly, down-to-earth personality alongside his unique methods of sharing the  innumerable wisdom he held made him a beloved teacher for all.  More than anything else, he was a friend who was with me through my ups and downs.
+</p>
                     <div class="text-right">
-                      <p class="name">- John Doe</p>
-                      <p class="designation">Founder, Arrow</p>
+                      <p class="name">- Dheeraj Raj</p>
+                      <p class="designation">  </p>
                     </div>
                   </div>
                   <div class="swiper-slide testimonial-box purple">
