--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-offset-6 col-xs-12">
+            	<img src="smlogo.png" align="left">
               <nav>
+              	
                 <div id="menu-toggle">
+
                   <div class="hamburger">
                     <span class="line"></span>
                     <span class="line"></span>
@@ -201,38 +204,6 @@ In the past year, I've successfully conducted virtual classes for Lakes Grammar 
 </html>
 
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience Certificate</title>
-
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-            text-align: center;
-        }
-
-        .certificate-img {
-            max-width: 30%;
-            height: auto;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>My Experience Certificates</h2>
-
-    <div>
-        <img class="certificate-img" src="assets/gv.jpg" alt="Experience Certificate">
-    </div>
-
-</body>
-</html>
-<br><br>
-
 
       <section class="testimonial">
         <div class="container">
@@ -357,7 +328,7 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
           <div class="row">
             <div class="col-md-12 text-center">
               <h1>Want To See My Resume?</h1>
-              <a href="assets/resume.pdf" class="btn btn-lg btn-primary">Get It Now!</a>
+              <a href="assets/resume.pdf" class="btn btn-lg btn-primary"><img src="smlogo.png"></a>
             </div>
           </div>
         </div>
@@ -370,10 +341,11 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
             <div class="col-md-12 text-center">
               <h1>Goutham S Kumar</h1>
               <ul class="social-links">
-                <li><a href="#"><img src="assets/behance.png"></a></li>
-                <li><a href="#"><img src="assets/dribbble.png"></a></li>
-                <li><a href="#"><img src="assets/twitter.png"></a></li>
-                <li><a href="#"><img src="assets/github.png"></a></li>
+                  <li><a href="https://www.linkedin.com/in/goutham-s-kumar-a106a2223/"><img src="assets/github.png"></a></li>
+                  <li><a href="https://wa.link/x5pmin"><img src="assets/behance.png"></a></li>
+                  <li><a href="https://www.facebook.com/goutham.skumar.18"><img src="assets/dribbble.png"></a></li>
+                  <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fgouthamsk222"><img src="assets/tests.png"></a></li>
+                  <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li>
               </ul>
             </div>
           </div>
