--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Goutham S Kumar</title>
-  <link rel="icon" type="image/x-icon" href="0.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
