--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Goutham S Kumar</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="0.ico">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,11 +30,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-offset-6 col-xs-12">
-            	<img src="smlogo.png" align="left">
               <nav>
-              	
                 <div id="menu-toggle">
-
                   <div class="hamburger">
                     <span class="line"></span>
                     <span class="line"></span>
@@ -204,7 +201,6 @@ In the past year, I've successfully conducted virtual classes for Lakes Grammar 
 </html>
 
 
-
       <section class="testimonial">
         <div class="container">
           <div class="row">
@@ -327,8 +323,35 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
+              <h1>Want to see my student's roaring marks?</h1>
+              <a href="marklock.html" class="btn btn-lg btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <br>
+
+
+      <!-- Contact Banner -->
+      <section class="contact-banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h1>Want To See My Experience?</h1>
+              <a href="certificatelockGV.html" class="btn btn-lg btn-primary"><img src="assets/logo-7.png"></a>
+            </div>
+          </div>
+        </div>
+      </section><br>
+
+
+      <!-- Contact Banner -->
+      <section class="contact-banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
               <h1>Want To See My Resume?</h1>
-              <a href="assets/resume.pdf" class="btn btn-lg btn-primary"><img src="smlogo.png"></a>
+              <a href="assets/resume.pdf" class="btn btn-lg btn-primary">Get It Now!</a>
             </div>
           </div>
         </div>
@@ -341,11 +364,10 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
             <div class="col-md-12 text-center">
               <h1>Goutham S Kumar</h1>
               <ul class="social-links">
-                  <li><a href="https://www.linkedin.com/in/goutham-s-kumar-a106a2223/"><img src="assets/github.png"></a></li>
-                  <li><a href="https://wa.link/x5pmin"><img src="assets/behance.png"></a></li>
-                  <li><a href="https://www.facebook.com/goutham.skumar.18"><img src="assets/dribbble.png"></a></li>
-                  <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fgouthamsk222"><img src="assets/tests.png"></a></li>
-                  <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li>
+                <li><a href="#"><img src="assets/behance.png"></a></li>
+                <li><a href="#"><img src="assets/dribbble.png"></a></li>
+                <li><a href="#"><img src="assets/twitter.png"></a></li>
+                <li><a href="#"><img src="assets/github.png"></a></li>
               </ul>
             </div>
           </div>
@@ -425,7 +447,7 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
       <script src="js/jquery-2.1.1.js"></script>
       <script src="js/swiper.jquery.min.js"></script>
       <!-- Initialize Client Swiper -->
-      <script>
+      <script>  
       var swiper1 = new Swiper('.client-swiper', {
         slidesPerView: 3,
         paginationClickable: true,
