--- a/marklock.html
+++ b/marklock.html
@@ -75,7 +75,7 @@
 
         if (passwordInput === correctPassword) {
             // Redirect to the desired site
-            window.location.href = "Files/index.html";
+            window.location.href = "assets/sree-marks.png";
         } else {
             // Display error message
             errorMessage.textContent = "Incorrect password. Please try again.";
