--- a/certificatelockGV.html
+++ b/certificatelockGV.html
@@ -75,7 +75,7 @@
 
         if (passwordInput === correctPassword) {
             // Redirect to the desired site
-            window.location.href = "assests/gv.jpg";
+            window.location.href = "assets/gv.jpg";
         } else {
             // Display error message
             errorMessage.textContent = "Incorrect password. Please try again.";
