--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
             <div class="col-md-12 text-center">
               <h1>Want To See My Resume?</h1>
 
-              <a href="assets/resume.pdf" class="btn btn-lg btn-primary"><img src="smlogo.png"></a>
+              <a href="resumelock.html" class="btn btn-lg btn-primary"><img src="smlogo.png"></a>
             </div>
           </div>
         </div><br>
