--- a/resumelock.html
+++ b/resumelock.html
@@ -75,7 +75,7 @@
 
         if (passwordInput === correctPassword) {
             // Redirect to the desired site
-            window.location.href = "assests/resume.pdf";
+            window.location.href = "assets/resume.pdf";
         } else {
             // Display error message
             errorMessage.textContent = "Incorrect password. Please try again.";
