--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
                       <p class="designation">  </p>
                     </div>
                   </div>
+                   <div class="swiper-slide testimonial-box yellow">
+                    <h1>   </h1>
+                    <p>I am pleased to recommend Mr. Goutham S Kumar as my math and physics teacher for IGCSE and AS levels. He's fantastic at explaining difficult concepts, making learning enjoyable. Mr. Kumar genuinely cares about students and has been instrumental in helping me grasp challenging topics. If you're in search of an excellent teacher for math and physics, Mr. Goutham S Kumar is the ideal choice!</p>
+                    <div class="text-right">
+                      <p class="name">- Denver John Demis</p>
+                      <p class="designation">  </p>
+                    </div>
+                  </div>
                   <div class="swiper-slide testimonial-box pink">
                     <h1>  </h1>
                     <p>One of the best teacher ever!!!! I love the way he teaches. His teaching style is no less than professional colleage proffesors such as Walter Lewin. His classes are full of jokes and laughs mainly because of his fun aproach to teach hard and boring subjects such as physics and math. I just love his voice modulation, ensuring that i never zone out </p>
