--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
 
       <!-- Statistics -->
 
+
+
       <section class="stats">
         <div class="container">
           <div class="row">
@@ -331,6 +333,23 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
           </div>
         </div>
       </section>
+<section id="books">
+    <h2>My Books</h2>
+
+    <div class="book-container">
+        <!-- Book 1 -->
+        
+        <!-- Book 2 -->
+        <div class="book">
+            <img src="assets/book1.png" alt="Book 2 Cover" width ="23%">
+            <img src="assets/book2.png" alt="Book 2 Cover" width ="23%">
+            <img src="assets/book3.png" alt="Book 2 Cover" width ="23%">
+            <img src="assets/book4.png" alt="Book 2 Cover" width ="23%">
+            <h5>   </h5>
+            <p></p>
+        </div>
+    </div>
+</section>
 
       <!-- Contact Banner -->
       <section class="contact-banner">
@@ -372,6 +391,68 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
         </div><br>
       </section>
 <hr>
+
+
+<!DOCTYPE html>
+
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        /* Book Section Styles */
+        #books {
+            background-color: #f5f5f5;
+            padding: 20px;
+            margin: 0px 0;
+            border-radius: 8px;
+        }
+
+        .book-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        .book {
+            margin: 15px;
+            padding: 15px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .book img {
+            max-width: 100%;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+
+        h5 {
+            color: #333;
+        }
+
+        
+    </style>
+
+
+<!-- Your other website content goes here -->
+
+<!-- Book Section -->
+
+<!-- Your other website content goes here -->
+
+</body>
+</html>
+
       <!-- Footer -->
       <footer>
         <div class="container-fluid">
