--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
         
         <!-- Book 2 -->
         <div class="book">
-            <img src="assets/book1.png" alt="Book 2 Cover" width ="40%">
-            <img src="assets/book2.png" alt="Book 2 Cover" width ="40%">
-            <img src="assets/book3.png" alt="Book 2 Cover" width ="40%">
+            <img src="assets/Book1.png" alt="Book 2 Cover" width ="40%">
+            <img src="assets/Book2.png" alt="Book 2 Cover" width ="40%">
+            <img src="assets/Book3.png" alt="Book 2 Cover" width ="40%">
             <img src="assets/book4.png" alt="Book 2 Cover" width ="40%">
             <h5>   </h5>
             <p></p>
