--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@ I highly recommend Mr. Goutham as a Math teacher. His passion for teaching and h
             <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li>  </ul></div>
 </div>
           <div class="row sub-footer">
-            <div class="col-md-12 text-center"><!--
+            <div class="col-md-12 text-center">
+            	<img src="assets/Footer.png" width="20%"><!--
               <p> 		<a href="#" target="_blank">  |   <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/"> </a></p>-->
             </div>
           </div>
