--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
               </nav>
               <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
               <div class="hero-text">
-                <h1><span>Hi, I am</span><br>Goutham</h1>
-                <h3>The Right Teacher You Are Looking For</h3>
-                <a href="https://wa.link/x5pmin" class="btn btn-lg btn-primary">Contact Me</a>
+                <h1><span>Hi, I am</span><br>Goutham</h1><br>
+                
+                
                 <ul class="social-links">
-                  <li class="label">Or through</li>
+                  <li class="label"></li>
                   <li><a href="https://www.linkedin.com/in/goutham-s-kumar-a106a2223/"><img src="assets/github.png"></a></li>
                   <li><a href="https://wa.link/x5pmin"><img src="assets/behance.png"></a></li>
                   <li><a href="https://www.facebook.com/goutham.skumar.18"><img src="assets/dribbble.png"></a></li>
                   <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fgouthamsk222"><img src="assets/tests.png"></a></li>
-                  <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li>
+                  <li><a href="https://www.teacheron.com/tutor-profile/33R7"><img src="assets/twitter.png"></a></li><br><br><br><br><br>
                 </ul>
               </div>
             </div>
